[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/ui/battle/ActorStatusPanel.gd" type="Script" id=1]
[ext_resource path="res://resources/visual/gui/theme_standard.tres" type="Theme" id=2]
[ext_resource path="res://assets/graphics/ui/staminabar_background.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/staminabar_fill_front.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/ui/icons/stats/defence.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/ui/icons/stats/attack.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/ui/icons/stats/energy.png" type="Texture" id=7]
[ext_resource path="res://src/ui/SoundButton.gd" type="Script" id=8]

[node name="ActorStatusPanel" type="PanelContainer"]
margin_right = 81.0
margin_bottom = 48.0
mouse_filter = 2
size_flags_horizontal = 0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 78.0
margin_bottom = 45.0

[node name="NameMargin" type="MarginContainer" parent="VBoxContainer"]
margin_right = 75.0
margin_bottom = 8.0
custom_constants/margin_top = 1
custom_constants/margin_left = 1

[node name="Name" type="Label" parent="VBoxContainer/NameMargin"]
margin_left = 1.0
margin_top = 1.0
margin_right = 75.0
margin_bottom = 8.0
size_flags_vertical = 0
text = "Test"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 75.0
margin_bottom = 42.0
custom_constants/separation = 0

[node name="PortraitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="Portrait" type="TextureRect" parent="VBoxContainer/HBoxContainer/PortraitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 24, 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsMargin" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 75.0
margin_bottom = 32.0
custom_constants/margin_right = 1

[node name="Stats" type="GridContainer" parent="VBoxContainer/HBoxContainer/StatsMargin"]
margin_top = 3.0
margin_right = 42.0
margin_bottom = 29.0
size_flags_vertical = 4
columns = 3

[node name="AttackIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats"]
margin_right = 8.0
margin_bottom = 8.0
size_flags_vertical = 4
texture = ExtResource( 6 )

[node name="Attack" type="Label" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats"]
margin_left = 9.0
margin_right = 17.0
margin_bottom = 7.0
rect_min_size = Vector2( 8, 0 )
text = "5"

[node name="Blank" type="Control" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats"]
margin_left = 18.0
margin_right = 42.0
margin_bottom = 8.0

[node name="DefenceIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats"]
margin_top = 9.0
margin_right = 8.0
margin_bottom = 17.0
texture = ExtResource( 5 )

[node name="CurrentStamina" type="Label" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats"]
margin_left = 9.0
margin_top = 9.0
margin_right = 17.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 0 )
text = "20"

[node name="StaminaBackground" type="TextureRect" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats"]
margin_left = 18.0
margin_top = 10.0
margin_right = 42.0
margin_bottom = 16.0
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="StaminaBar" type="TextureProgress" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats/StaminaBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_vertical = 4
value = 100.0
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats"]
margin_top = 18.0
margin_right = 8.0
margin_bottom = 26.0
texture = ExtResource( 7 )

[node name="CurrentEnergy" type="Label" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats"]
margin_left = 9.0
margin_top = 18.0
margin_right = 17.0
margin_bottom = 25.0
rect_min_size = Vector2( 8, 0 )
text = "20"

[node name="EnergyBackground" type="TextureRect" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats"]
margin_left = 18.0
margin_top = 19.0
margin_right = 42.0
margin_bottom = 25.0
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="EnergyBar" type="TextureProgress" parent="VBoxContainer/HBoxContainer/StatsMargin/Stats/EnergyBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_vertical = 4
value = 100.0
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PortraitButton" to="." method="_on_PortraitButton_pressed"]
